--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Sweesthi’s Birthday Countdown 💖</title>
+  <title>Sweeshti’s Birthday Countdown 💖</title>
 
   <!-- Merlin font (local if available) with graceful fallback -->
   <link rel="stylesheet" href="style.css" />
